# internal-client-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: Dependencies.cmake  internal_clientConfig.cmake
examples/: CMakeLists.txt  README.md  main.cpp
include/: Communication.hpp  Context.hpp
include/helpers/: EnumMappers.hpp
include/protobuf/: ProtoSerializer.hpp
lib/fleet-protocol/lib/internal_client/include/: internal_client.h
source/: Communication.cpp  Context.cpp
source/fleet_protocol/: internal_client.cpp  memory_management.cpp
source/helpers/: EnumMappers.cpp
source/protobuf/: ProtoSerializer.cpp
